[project]
name = "nodriver" # Required
version = "0.1a0"  # Required
description = ""  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = [
    "webdriver", "browser", "captcha", "scraping",
    "selenium", "navigator", "python3", "cloudflare",
    "chromedriver", "anti-bot", "bot-detection",
    "cloudflare-bypass", "distil", "anti-detection"]
authors = [
  {name = "UltrafunkAmsterdam", email = "doesnotexist@ultrafunk.nl" } # Optional
]

maintainers = [
  {name = "A. Great Maintainer", email = "maintainer@example.com" } # Optional
]
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable

    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Browser Automation :: Selenium :: Browsers",
    "Framework :: Selenium",
    "Framework :: Undetected-Chromedriver",
    "License :: OSI Approved :: Proprietry",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

]

dependencies = [

     #"selenium>=4.9.0",
     #"requests",
    # "chrome-devtools-protocol @ git+https://github.com/ultrafunkamsterdam/chrome-devtools-protocol",
      "mss",
    #  "python-cdp @ git+https://github.com/HMaker/python-cdp",
      "websockets>=11",
]

#
[project.urls]
"Homepage" = "https://github.com/UltrafunkAmsterdam/Undetected-Chromedriver"
"Bug Reports" = "https://github.com/UltrafunkAmsterdam/Undetected-Chromedriver/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "https://givemoney.local"
"Source" = "https://github.com/UltrafunkAmsterdam/Undetected-Chromedriver/"


[project.scripts]  # Optional
#sample = "sample:main"

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"